# CPlusPlusTraining

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
Arena/: CMakeLists.txt  arena.h  arena_allocator.h  main.cpp
DataBuffer/: .data_buffer.h.swp  .main.cpp.swp  CMakeLists.txt  bin  data_buffer.h  main.cpp
DataStructuresWithLocks/ThreadSafeLookupTable/: CMakeLists.txt  main.cpp
DataStructuresWithLocks/ThreadSafeStack/: CMakeLists.txt  main.cpp  threadsafe_stack.h
DataStructuresWithLocks/TrreadSafeLookupTable/: CMakeLists.txt  main.cpp  threadsafe_lookup_table.h
StaticString/: CMakeLists.txt  main.cpp  static_string.h
StringPool/: CMakeLists.txt  main.cpp  string_pool.h
